updated code to make use of alarms when updating weather

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,9 @@
             android:authorities="com.example.android.sunshine.app" />
 
         <service android:name=".services.SunshineService" />
+
+
+        <receiver android:name=".services.SunshineService$AlarmReceiver" />
     </application>
 
 </manifest>
