--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'com.google.android.gms:play-services-gcm:9.0.0'
     testCompile 'junit:junit:4.12'
 }
+
+// Add to the bottom of the file
+apply plugin: 'com.google.gms.google-services'
