--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.android.support:gridlayout-v7:25.1.0'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.google.android.gms:play-services-gcm:10.0.1'
