--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:10.0.1'
     compile 'com.google.android.gms:play-services-places:10.0.1'
     compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'com.google.android.apps.muzei:muzei-api:2.0'
     testCompile 'junit:junit:4.12'
 }
 
